--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
 }
 
 h1 {
-    margin: 10px auto;
-    width: fit-content;
+    margin: 20px auto;
+    text-align: center;
+    text-transform: capitalize;
 }
